doc : swagger api updated
