# src/controllers/posts/readAllPosts.js
@@ -52,7 +52,8 @@ export default async (req, res, next) => {
                     "userInfo.is_active": 0,
                     "createdAt": 0,
                     "updatedAt": 0,
-                    "__v": 0
+                    "__v": 0,
+                    "is_active": 0
                 }
             }
         ]);
